--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,11 @@
-{% extends "base.html" %}
-{% load staticfiles %}
-{% block body %}
-{{ block.super }}
-<div class="site">
-  <p>I'm a website!</p>
-</div>{% endblock %}
+{% load staticfiles %}<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Spacet</title>
+    <link rel="stylesheet" type="text/css" href="{% static "css/style.dist.css" %}">
+    <script src="{% static "js/requirements.dist.js" %}" type="text/javascript"></script>{% block body %}
+    <body>
+      <canvas id="clock"></canvas>
+    </body>{% endblock %}
+  </head>
+</html>
