--- a/static-src/jade/home.jade
+++ b/static-src/jade/home.jade
@@ -9,5 +9,5 @@ html(lang="en")
         | {% block body %}
         block body
             body
-                 canvas(id="clock")
+                canvas(id="vitals")
         | {% endblock %}
