--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="{% static "css/style.dist.css" %}">
     <script src="{% static "js/requirements.dist.js" %}" type="text/javascript"></script>{% block body %}
     <body>
-      <canvas id="clock"></canvas>
+      <canvas id="vitals"></canvas>
     </body>{% endblock %}
   </head>
 </html>
