--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
     <title>Spacet</title>
     <link rel="stylesheet" type="text/css" href="{% static "css/style.dist.css" %}">
     <script src="{% static "js/requirements.dist.js" %}" type="text/javascript"></script>{% block body %}
-    <body>
+    <body class="stars">
       <canvas id="vitals"></canvas>
     </body>{% endblock %}
   </head>
