--- a/static-src/jade/home.jade
+++ b/static-src/jade/home.jade
@@ -8,6 +8,6 @@ html(lang="en")
 
         | {% block body %}
         block body
-            body
+            body(class="stars")
                 canvas(id="vitals")
         | {% endblock %}
