--- a/static-src/sass/style.scss
+++ b/static-src/sass/style.scss
@@ -1,6 +1,18 @@
 html, body {
   width: 100%;
   height: 100%;
+  &.stars {
+  	background: url("images/distant-stars.png")
+  }
+  &.space-walk {
+  	background: url("images/space-walk.jpg")
+  }
+  &.moon {
+  	background: url("images/moon.jpg")
+  }
+  &.earth {
+  	background: url("images/earth.png")
+  }
 }
 
 #vitals {
