--- a/static-src/sass/style.scss
+++ b/static-src/sass/style.scss
@@ -2,16 +2,16 @@ html, body {
   width: 100%;
   height: 100%;
   &.stars {
-  	background: url("images/distant-stars.png")
+  	background: url("../images/distant-stars.png")
   }
   &.space-walk {
-  	background: url("images/space-walk.jpg")
+  	background: url("../images/space-walk.jpg")
   }
   &.moon {
-  	background: url("images/moon.jpg")
+  	background: url("../images/moon.jpg")
   }
   &.earth {
-  	background: url("images/earth.png")
+  	background: url("../images/earth.png")
   }
 }
 
