--- a/static/css/style.dist.css
+++ b/static/css/style.dist.css
@@ -13,13 +13,13 @@ html, body {
   width: 100%;
   height: 100%; }
   html.stars, body.stars {
-    background: url("images/distant-stars.png"); }
+    background: url("../images/distant-stars.png"); }
   html.space-walk, body.space-walk {
-    background: url("images/space-walk.jpg"); }
+    background: url("../images/space-walk.jpg"); }
   html.moon, body.moon {
-    background: url("images/moon.jpg"); }
+    background: url("../images/moon.jpg"); }
   html.earth, body.earth {
-    background: url("images/earth.png"); }
+    background: url("../images/earth.png"); }
 
 #vitals {
   width: 500px;
