vitals lookin good

--- a/static-src/jade/home.jade
+++ b/static-src/jade/home.jade
@@ -9,5 +9,6 @@ html(lang="en")
         | {% block body %}
         block body
             body(class="stars")
-                canvas(id="vitals")
+                .vitals
+                    canvas(id="vitals")
         | {% endblock %}
