--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,9 @@
     <link rel="stylesheet" type="text/css" href="{% static "css/style.dist.css" %}">
     <script src="{% static "js/requirements.dist.js" %}" type="text/javascript"></script>{% block body %}
     <body class="stars">
-      <canvas id="vitals"></canvas>
+      <div class="vitals">
+        <canvas id="vitals"></canvas>
+      </div>
     </body>{% endblock %}
   </head>
 </html>
