--- a/static-src/sass/style.scss
+++ b/static-src/sass/style.scss
@@ -15,9 +15,14 @@ html, body {
   }
 }
 
+.vitals {
+  position: absolute;
+  bottom: 1px;
+  left: 1px;
+}
 #vitals {
-  width: 500px;
-  height: 500px;
+  width: 310px;
+  height: 280px;
   margin: auto;
   position: relative;
   display: block;
