--- a/static-src/jade/home.jade
+++ b/static-src/jade/home.jade
@@ -11,4 +11,7 @@ html(lang="en")
             body(class="stars")
                 .vitals
                     canvas(id="vitals")
-        | {% endblock %}
+                .status-bar
+                    p test
+                canvas(id="vitals")
+
