--- a/static/css/style.dist.css
+++ b/static/css/style.dist.css
@@ -26,9 +26,13 @@ html, body {
   bottom: 1px;
   left: 1px; }
 
-#vitals {
-  width: 310px;
-  height: 280px;
-  margin: auto;
-  position: relative;
-  display: block; }
+.status-bar {
+  padding: 10px;
+  background: #216599;
+  background: rgba(33, 101, 153, 0.7);
+  margin-top: 7px;
+  margin-right: 500px; }
+  .status-bar p {
+    color: white;
+    font-size: 18px;
+    padding-left: 20px; }
