--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,10 @@
       <div class="vitals">
         <canvas id="vitals"></canvas>
       </div>
-    </body>{% endblock %}
+      <div class="status-bar">
+        <p>test</p>
+      </div>
+      <canvas id="vitals"></canvas>
+    </body>
   </head>
 </html>
