fixing what I broke

--- a/static-src/jade/home.jade
+++ b/static-src/jade/home.jade
@@ -14,4 +14,4 @@ html(lang="en")
                 .status-bar
                     p test
                 canvas(id="vitals")
-
+        | {% endblock %}
