--- a/templates/home.html
+++ b/templates/home.html
@@ -12,6 +12,6 @@
         <p>test</p>
       </div>
       <canvas id="vitals"></canvas>
-    </body>
+    </body>{% endblock %}
   </head>
 </html>
