fixing the styles

--- a/static-src/sass/style.scss
+++ b/static-src/sass/style.scss
@@ -21,6 +21,14 @@ html, body {
   left: 1px;
 }
 
+#vitals {
+  width: 310px;
+  height: 280px;
+  margin: auto;
+  position: relative;
+  display: block;
+}
+
 .status-bar {
 	padding: 10px;
 	background: rgb(33, 101, 153);
