super awesome fun times

--- a/static-src/jade/home.jade
+++ b/static-src/jade/home.jade
@@ -12,6 +12,7 @@ html(lang="en")
                 .vitals
                     canvas(id="vitals")
                 .status-bar
-                    p test
+                    p 30 m from ISS
+                .info-box
                 canvas(id="vitals")
         | {% endblock %}
