--- a/templates/home.html
+++ b/templates/home.html
@@ -9,8 +9,9 @@
         <canvas id="vitals"></canvas>
       </div>
       <div class="status-bar">
-        <p>test</p>
+        <p>30 m from ISS</p>
       </div>
+      <div class="info-box"></div>
       <canvas id="vitals"></canvas>
     </body>{% endblock %}
   </head>
