--- a/static-src/sass/style.scss
+++ b/static-src/sass/style.scss
@@ -30,16 +30,42 @@ html, body {
 }
 
 .status-bar {
-	padding: 10px;
-	background: rgb(33, 101, 153);
-	background: rgba(33, 101, 153, 0.7);
-	margin-top: 7px;
+	padding: 13px;
+	background: rgb(0, 192, 255);
+	background: rgba(0, 192, 255, 0.3);
 	margin-right: 500px;
 	p {
 		color: white;
 		font-size: 18px;
+		margin: auto;
 		padding-left: 20px;
 	}
 }
 
+.info-box {
+	float: right;
+	width: 100px; 
+   	height: 100px; 
+   	background: rgba(0, 192, 255, 0.3);
+}
+
+.info-box:before {
+   height: 0;
+   width: 40px;
+   content:"";
+   position: absolute; 
+   border-bottom: 30px solid #00C0FF opacity 1;
+   border-left: 30px solid white opacity 1; 
+   border-right: 30px solid white opacity 1; 
+}
+.info-box:after {
+   height: 0;
+   width: 40px;
+   content:"";
+   position: absolute; 
+   border-top: 30px solid #00C0FF opacity 1; 
+   border-left: 30px solid white opacity 1;  
+   border-right: 30px solid white opacity 1; 
+   margin: 70px 0 0 0;
+}
 
