--- a/static-src/jade/home.jade
+++ b/static-src/jade/home.jade
@@ -11,8 +11,10 @@ html(lang="en")
             body(class="stars")
                 .vitals
                     canvas(id="vitals")
+                .infoBoxTopRightContainer
+                    canvas(id="infoBoxTopRight")
+                .infoBoxBottomRightContainer
+                    canvas(id="infoBoxBottomRight")
                 .status-bar
                     p 30 m from ISS
-                .info-box
-                canvas(id="vitals")
         | {% endblock %}
