--- a/templates/home.html
+++ b/templates/home.html
@@ -8,11 +8,15 @@
       <div class="vitals">
         <canvas id="vitals"></canvas>
       </div>
+      <div class="infoBoxTopRightContainer">
+        <canvas id="infoBoxTopRight"></canvas>
+      </div>
+      <div class="infoBoxBottomRightContainer">
+        <canvas id="infoBoxBottomRight"></canvas>
+      </div>
       <div class="status-bar">
         <p>30 m from ISS</p>
       </div>
-      <div class="info-box"></div>
-      <canvas id="vitals"></canvas>
     </body>{% endblock %}
   </head>
 </html>
