--- a/static-src/sass/style.scss
+++ b/static-src/sass/style.scss
@@ -43,7 +43,7 @@ html, body {
 
 #infoBoxBottomRight {
   width: 450px;
-  height: 330px;
+  height: 350px;
   margin: auto;
   position: relative;
   display: block;
@@ -64,10 +64,15 @@ html, body {
 	margin-right: 500px;
 	p {
 		color: white;
-		font-size: 18px;
+		font-size: 24px;
 		margin: auto;
 		padding-left: 20px;
+        vertical-align: middle;
+        font-style: bold;
 	}
+    img {
+        margin-top: -5px;
+    }
 }
 
 .info-box {
