--- a/static/css/style.dist.css
+++ b/static/css/style.dist.css
@@ -45,7 +45,7 @@ html, body {
 
 #infoBoxBottomRight {
   width: 450px;
-  height: 330px;
+  height: 350px;
   margin: auto;
   position: relative;
   display: block; }
@@ -64,9 +64,13 @@ html, body {
   margin-right: 500px; }
   .status-bar p {
     color: white;
-    font-size: 18px;
+    font-size: 24px;
     margin: auto;
-    padding-left: 20px; }
+    padding-left: 20px;
+    vertical-align: middle;
+    font-style: bold; }
+  .status-bar img {
+    margin-top: -5px; }
 
 .info-box {
   float: right;
