--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,7 @@
         <canvas id="infoBoxBottomRight"></canvas>
       </div>
       <div class="status-bar">
-        <p>30 m from ISS</p>
+        <p><img src="{% static "images/location.png" %}" alt="">  30 m from ISS</p>
       </div>
     </body>{% endblock %}
   </head>
