--- a/templates/home.html
+++ b/templates/home.html
@@ -14,8 +14,11 @@
       <div class="infoBoxBottomRightContainer">
         <canvas id="infoBoxBottomRight"></canvas>
       </div>
-      <div class="status-bar">
+      <div class="status-bar top-bar">
         <p><img src="{% static "images/location.png" %}" alt="">  30 m from ISS</p>
+      </div>
+      <div class="alert-info status-bar">
+        <p><strong>Heads up!</strong> This alert needs your attention, but it's not super important.</p>
       </div>
     </body>{% endblock %}
   </head>
