--- a/static-src/jade/home.jade
+++ b/static-src/jade/home.jade
@@ -13,8 +13,20 @@ html(lang="en")
                     canvas(id="vitals")
                 .infoBoxTopRightContainer
                     canvas(id="infoBoxTopRight")
+                    img(src="http://24.media.tumblr.com/a075e0909806d87578f4f5c9a8c4cdda/tumblr_mvx66dxYMc1splfpxo1_400.gif", alt="", class="doge")
                 .infoBoxBottomRightContainer
+                    img(src="http://i.imgur.com/Entxsw6.jpg", class="doge-far-away")
                     canvas(id="infoBoxBottomRight")
+                    .doge-far-away-text
+                        p
+                            |  Such awesome fact
+
+                        p
+                            |  Much to know
+
+                        p
+                            |  Very far away
+
                 .status-bar.top-bar
                     p
                         img(src!='{% static "images/location.png" %}', alt="")
