--- a/static/css/style.dist.css
+++ b/static/css/style.dist.css
@@ -107,3 +107,18 @@ html, body {
 .alert-info {
   display: none;
   margin-top: 10px; }
+
+.doge {
+  z-index: 2;
+  margin-top: -420px; }
+
+.doge-far-away {
+  height: 200px;
+  width: auto;
+  margin-left: 75px; }
+
+.doge-far-away-text {
+  position: absolute;
+  top: 330px;
+  left: 150px;
+  font-size: 30px; }
