--- a/static-src/jade/home.jade
+++ b/static-src/jade/home.jade
@@ -12,11 +12,11 @@ html(lang="en")
                 .vitals
                     canvas(id="vitals")
                 .infoBoxTopRightContainer
-                    canvas(id="infoBoxTopRight")
+                    canvas(id="infoBoxTopRight", width="300px", height="300px")
                     img(src="http://24.media.tumblr.com/a075e0909806d87578f4f5c9a8c4cdda/tumblr_mvx66dxYMc1splfpxo1_400.gif", alt="", class="doge")
                 .infoBoxBottomRightContainer
                     img(src="http://i.imgur.com/Entxsw6.jpg", class="doge-far-away")
-                    canvas(id="infoBoxBottomRight")
+                    canvas(id="infoBoxBottomRight", width="450px" ,height="350px")
                     .doge-far-away-text
                         p
                             |  Such awesome fact
