--- a/templates/home.html
+++ b/templates/home.html
@@ -9,10 +9,10 @@
         <canvas id="vitals"></canvas>
       </div>
       <div class="infoBoxTopRightContainer">
-        <canvas id="infoBoxTopRight"></canvas><img src="http://24.media.tumblr.com/a075e0909806d87578f4f5c9a8c4cdda/tumblr_mvx66dxYMc1splfpxo1_400.gif" alt="" class="doge">
+        <canvas id="infoBoxTopRight" width="300px" height="300px"></canvas><img src="http://24.media.tumblr.com/a075e0909806d87578f4f5c9a8c4cdda/tumblr_mvx66dxYMc1splfpxo1_400.gif" alt="" class="doge">
       </div>
       <div class="infoBoxBottomRightContainer"><img src="http://i.imgur.com/Entxsw6.jpg" class="doge-far-away">
-        <canvas id="infoBoxBottomRight"></canvas>
+        <canvas id="infoBoxBottomRight" width="450px" height="350px"></canvas>
         <div class="doge-far-away-text">
           <p> Such awesome fact</p>
           <p> Much to know</p>
