--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,10 @@
         <canvas id="vitals"></canvas>
       </div>
       <div class="infoBoxTopRightContainer">
-        <canvas id="infoBoxTopRight" width="300px" height="300px"></canvas><img src="http://24.media.tumblr.com/a075e0909806d87578f4f5c9a8c4cdda/tumblr_mvx66dxYMc1splfpxo1_400.gif" alt="" class="mini-map">
+        <canvas id="infoBoxTopRight" width="300px" height="300px"></canvas>
+      </div>
+      <div class="mini-map-container">
+        <div class="mini-map"></div>
       </div>
       <div class="infoBoxBottomRightContainer">
         <div class="zoomed-in-object"><img src="http://i.imgur.com/Entxsw6.jpg"></div>
