--- a/static-src/jade/home.jade
+++ b/static-src/jade/home.jade
@@ -13,7 +13,9 @@ html(lang="en")
                     canvas(id="vitals")
                 .infoBoxTopRightContainer
                     canvas(id="infoBoxTopRight", width="300px", height="300px")
-                    img(src="http://24.media.tumblr.com/a075e0909806d87578f4f5c9a8c4cdda/tumblr_mvx66dxYMc1splfpxo1_400.gif", alt="", class="mini-map")
+                .mini-map-container
+                    .mini-map
+                    //- img(src!='{% static "images/radar.gif" %}', alt="", class="mini-map")
                 .infoBoxBottomRightContainer
                     .zoomed-in-object
                         img(src="http://i.imgur.com/Entxsw6.jpg")
