--- a/static-src/jade/home3.jade
+++ b/static-src/jade/home3.jade
@@ -8,7 +8,7 @@ html(lang="en")
 
         | {% block body %}
         block body
-            body(class="stars")
+            body(class="moon")
                 .vitals
                     canvas(id="vitals")
                 .infoBoxTopRightContainer
@@ -17,16 +17,25 @@ html(lang="en")
                     .mini-map
                 .infoBoxBottomRightContainer
                     .zoomed-in-object
-                        img(src!='{% static "images/glowing-eye.jpg" %}')
+                        img(src!='{% static "images/moon-detailed.jpg" %}', style="border-radius:50%")
                     .aim
                         img(src!='{% static "images/3lines.png" %}')
                     canvas(id="infoBoxBottomRight", width="450px" ,height="350px")
                     .doge-far-away-text
                         p
-                            |  The Glowing Eye Nebula
+                            |  Name: Moon
 
                         p.text
-                            |  Planetary nebulae have nothing to do with planets. They are shells of gas thrown off by Sun-like stars nearing the ends of their lives. The star's loss of its outer gaseous layers exposes the hot stellar core, whose strong ultraviolet radiation then causes the ejected gas to fluoresce as the planetary nebula.
+                            |  Distance: 384,400 km &amp; Circumference: 10,917 km
+
+                        p.text
+                            |  Temperature: Day 100 d C. At night, 173 d C.
+
+                        p.text
+                            |  Orbital period: 27 days
+
+                        p.text
+                            |  5th largest moon in the solar system
 
                 .status-bar.top-bar
                     p
@@ -34,5 +43,6 @@ html(lang="en")
 
                         |   30 m from ISS
                 .alert-info.status-bar
-                    p <strong>Heads up!</strong> It has been 16 hours since you last slept!
+                    p <strong>Chow time!</strong> Make your way to the kitchen
+
         | {% endblock %}
