--- a/templates/home2.html
+++ b/templates/home2.html
@@ -4,7 +4,7 @@
     <title>Spacet</title>
     <link rel="stylesheet" type="text/css" href="{% static "css/style.dist.css" %}">
     <script src="{% static "js/requirements.dist.js" %}" type="text/javascript"></script>{% block body %}
-    <body class="stars">
+    <body class="space-walk">
       <div class="vitals">
         <canvas id="vitals"></canvas>
       </div>
@@ -15,19 +15,22 @@
         <div class="mini-map"></div>
       </div>
       <div class="infoBoxBottomRightContainer">
-        <div class="zoomed-in-object"><img src="{% static "images/glowing-eye.jpg" %}"></div>
+        <div class="zoomed-in-object"><img src="http://www.spacefacts.de/bios/portraits/astronauts/meade_ca.jpg"></div>
         <div class="aim"><img src="{% static "images/3lines.png" %}"></div>
         <canvas id="infoBoxBottomRight" width="450px" height="350px"></canvas>
         <div class="doge-far-away-text">
-          <p> The Glowing Eye Nebula</p>
-          <p class="text"> Planetary nebulae have nothing to do with planets. They are shells of gas thrown off by Sun-like stars nearing the ends of their lives. The star's loss of its outer gaseous layers exposes the hot stellar core, whose strong ultraviolet radiation then causes the ejected gas to fluoresce as the planetary nebula.</p>
+          <p> Astronaut Carl Meade</p>
+          <p class="text"> Located: ~150 miles above the Earth</p>
+          <p class="text"> Traveling Speed: ~10 Km/h (1, 0, -2)</p>
+          <p class="text"> Distance: 1 Km</p>
+          <p class="text"> Time in Space: 13 days</p>
         </div>
       </div>
       <div class="status-bar top-bar">
         <p><img src="{% static "images/location.png" %}" alt="">  30 m from ISS</p>
       </div>
       <div class="alert-info status-bar">
-        <p><strong>Heads up!</strong> It has been 16 hours since you last slept!</p>
+        <p><strong>Checkout it out!</strong> The sun is rising!</p>
       </div>
     </body>{% endblock %}
   </head>
