--- a/templates/home4.html
+++ b/templates/home4.html
@@ -4,7 +4,7 @@
     <title>Spacet</title>
     <link rel="stylesheet" type="text/css" href="{% static "css/style.dist.css" %}">
     <script src="{% static "js/requirements.dist.js" %}" type="text/javascript"></script>{% block body %}
-    <body class="stars">
+    <body class="earth">
       <div class="vitals">
         <canvas id="vitals"></canvas>
       </div>
@@ -15,19 +15,19 @@
         <div class="mini-map"></div>
       </div>
       <div class="infoBoxBottomRightContainer">
-        <div class="zoomed-in-object"><img src="{% static "images/glowing-eye.jpg" %}"></div>
+        <div class="zoomed-in-object"><img src="http://upload.wikimedia.org/wikipedia/commons/6/6f/Earth_Eastern_Hemisphere.jpg" style="border-radius:50%"></div>
         <div class="aim"><img src="{% static "images/3lines.png" %}"></div>
         <canvas id="infoBoxBottomRight" width="450px" height="350px"></canvas>
         <div class="doge-far-away-text">
-          <p> The Glowing Eye Nebula</p>
-          <p class="text"> Planetary nebulae have nothing to do with planets. They are shells of gas thrown off by Sun-like stars nearing the ends of their lives. The star's loss of its outer gaseous layers exposes the hot stellar core, whose strong ultraviolet radiation then causes the ejected gas to fluoresce as the planetary nebula.</p>
+          <p> Aurora Borealis/Northern Lights</p>
+          <p class="text"> You're seeing the result of collisions between gaseous particles in the Earth's atmosphere with charged particles released from the sun's atmosphere.</p>
         </div>
       </div>
       <div class="status-bar top-bar">
         <p><img src="{% static "images/location.png" %}" alt="">  30 m from ISS</p>
       </div>
       <div class="alert-info status-bar">
-        <p><strong>Heads up!</strong> It has been 16 hours since you last slept!</p>
+        <p><strong>Approaching home</strong> You are about to pass over your home</p>
       </div>
     </body>{% endblock %}
   </head>
