--- a/templates/home4.html
+++ b/templates/home4.html
@@ -5,6 +5,16 @@
     <link rel="stylesheet" type="text/css" href="{% static "css/style.dist.css" %}">
     <script src="{% static "js/requirements.dist.js" %}" type="text/javascript"></script>{% block body %}
     <body class="earth">
+      <div class="location-pin">
+        <div id="mtl"><i class="fa fa-map-marker"></i>
+          <p>  Montreal, Canada</p>
+        </div>
+        <div id="mtl-info">
+          <p class="text"> Weather: 13°C, Wind W at 3 km/h, 38% Humidity</p>
+          <p class="text"> Population: 1.621 million</p>
+          <p class="text"> Time: 6:06pm</p>
+        </div>
+      </div>
       <div class="vitals">
         <canvas id="vitals"></canvas>
       </div>
