--- a/static-src/jade/home2.jade
+++ b/static-src/jade/home2.jade
@@ -42,7 +42,7 @@ html(lang="en")
                         img(src!='{% static "images/location.png" %}', alt="")
 
                         |   30 m from ISS
-                .alert-info.status-bar
-                    p <strong>Checkout it out!</strong> The sun is rising!
+                .alert-info.status-bar.emergency
+                    p <strong>Emergency!</strong> Please return to the ISS
 
         | {% endblock %}
