--- a/templates/home2.html
+++ b/templates/home2.html
@@ -29,8 +29,8 @@
       <div class="status-bar top-bar">
         <p><img src="{% static "images/location.png" %}" alt="">  30 m from ISS</p>
       </div>
-      <div class="alert-info status-bar">
-        <p><strong>Checkout it out!</strong> The sun is rising!</p>
+      <div class="alert-info status-bar emergency">
+        <p><strong>Emergency!</strong> Please return to the ISS</p>
       </div>
     </body>{% endblock %}
   </head>
