--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -712,7 +712,7 @@ dt {
   max-width: 650px;
   margin: 0 auto;
   padding: 0 10px;
-  background: blue;
+  background: none;
   margin: 6px auto;
 }
 #header nav li {
